# ng_engine

./: .gitignore  CMakeLists.txt  README.md  game_diagram.vpd
common/: geometry.cxx  geometry.hxx
engine/: CMakeLists.txt
engine/include/: animation.hxx  engine.hxx  game_object.hxx  timer.hxx
engine/src/: animation.cxx  engine.cxx  game_object.cxx  timer.cxx
game/: CMakeLists.txt
game/include/: game_object.hxx
game/src/: game.cxx  game_object.cxx
logger/: CMakeLists.txt
logger/include/: decorator.h  log.h  log_manager.h  logfile_handler.h  my_log.h
logger/src/: decorator.cpp  log.cpp  log_manager.cpp  logfile_handler.cpp  my_log.cpp
